--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
               About
               <img src="https://goldsatoshi.fun/4.png" alt="" style="width: 20%;">
             </h2>
+            <img style="border-radius: 30px; width: 100%;" src="/images/banner.jpg"><br>
             <p class="about__text">
               Introducing MOODENG6900—the blockchain powerhouse primed to shake the markets and flip the financial world upside down. 
               With the energy to skyrocket past the S&P 500 and the ambition to hit a $69 trillion market cap, this is the token ready to take over, 
